[gd_scene load_steps=13 format=3 uid="uid://byx462l8qyv0i"]

[ext_resource type="Texture2D" uid="uid://bn474tibrlali" path="res://asset/2d/ui/pause/secret_tile.png" id="1_22o5u"]
[ext_resource type="Script" path="res://script/ui/secret/secret_menu.gd" id="1_an1wm"]
[ext_resource type="Texture2D" uid="uid://fdv251qtqgfm" path="res://asset/2d/ui/pause/secretmenu_buttons.png" id="2_dhrnh"]
[ext_resource type="Texture2D" uid="uid://tlu4ma4mm3b4" path="res://asset/2d/ui/pause/secret_cursor.png" id="3_intpf"]
[ext_resource type="AudioStream" uid="uid://b18ajvqy3kl3u" path="res://sfx/pause/selected.wav" id="6_s8fag"]
[ext_resource type="AudioStream" uid="uid://mmkhc5kb3o70" path="res://sfx/pause/select1.wav" id="7_ba6fj"]
[ext_resource type="AudioStream" uid="uid://b3ptbmyyksd43" path="res://sfx/pause/select2.wav" id="8_bfxqx"]

[sub_resource type="Gradient" id="Gradient_wgvqi"]
offsets = PackedFloat32Array(0.25, 1)
colors = PackedColorArray(0.952941, 0.368627, 0.176471, 0, 0.952941, 0.368627, 0.176471, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_g08g6"]
gradient = SubResource("Gradient_wgvqi")
width = 320
height = 240
fill_from = Vector2(0, 0.5)
fill_to = Vector2(0, 1)
repeat = 2

[sub_resource type="Gradient" id="Gradient_w3poj"]
offsets = PackedFloat32Array(0.5, 1)
colors = PackedColorArray(0.952941, 0.368627, 0.176471, 0, 0.952941, 0.368627, 0.176471, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_e0ck4"]
gradient = SubResource("Gradient_w3poj")
width = 320
height = 240
fill_from = Vector2(0.5, 0)
repeat = 2

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_2edvr"]
streams_count = 2
playback_mode = 2
random_pitch = 1.0
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("7_ba6fj")
stream_0/weight = 1.0
stream_1/stream = ExtResource("8_bfxqx")
stream_1/weight = 1.0

[node name="SecretMenu" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_an1wm")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 240.0
texture = ExtResource("1_22o5u")
stretch_mode = 1

[node name="Gradient2" type="TextureRect" parent="."]
z_as_relative = false
layout_mode = 0
offset_right = 320.0
offset_bottom = 240.0
texture = SubResource("GradientTexture2D_g08g6")
stretch_mode = 1

[node name="Gradient3" type="TextureRect" parent="."]
z_as_relative = false
layout_mode = 0
offset_right = 320.0
offset_bottom = 240.0
texture = SubResource("GradientTexture2D_e0ck4")
stretch_mode = 1

[node name="OptionButtons" type="Marker2D" parent="."]
z_index = 1
position = Vector2(-15, 0)

[node name="RecordingsMenu" type="Sprite2D" parent="OptionButtons"]
position = Vector2(131, 62)
texture = ExtResource("2_dhrnh")
centered = false
hframes = 2
vframes = 3

[node name="ImpulseMenu" type="Sprite2D" parent="OptionButtons"]
position = Vector2(131, 92)
texture = ExtResource("2_dhrnh")
centered = false
hframes = 2
vframes = 3
frame = 2

[node name="ExtraMenu" type="Sprite2D" parent="OptionButtons"]
position = Vector2(131, 122)
texture = ExtResource("2_dhrnh")
centered = false
hframes = 2
vframes = 3
frame = 4

[node name="CursorPos" type="Marker2D" parent="."]
z_index = 1
position = Vector2(-15, 0)

[node name="Cursor" type="Sprite2D" parent="CursorPos"]
unique_name_in_owner = true
position = Vector2(143, 59)
texture = ExtResource("3_intpf")
centered = false
offset = Vector2(-65, 0)
hframes = 3

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_s8fag")
bus = &"HUD_SFX"

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_2edvr")
bus = &"HUD_SFX"

[node name="SubMenu" type="Control" parent="."]
unique_name_in_owner = true
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
